; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_free_io.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_free_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.ctl_io = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.ctl_io_pool = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ctl_free_io(%union.ctl_io* %0) #0 {
  %2 = alloca %union.ctl_io*, align 8
  %3 = alloca %struct.ctl_io_pool*, align 8
  store %union.ctl_io* %0, %union.ctl_io** %2, align 8
  %4 = load %union.ctl_io*, %union.ctl_io** %2, align 8
  %5 = icmp eq %union.ctl_io* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %18

7:                                                ; preds = %1
  %8 = load %union.ctl_io*, %union.ctl_io** %2, align 8
  %9 = bitcast %union.ctl_io* %8 to %struct.TYPE_2__*
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.ctl_io_pool*
  store %struct.ctl_io_pool* %12, %struct.ctl_io_pool** %3, align 8
  %13 = load %struct.ctl_io_pool*, %struct.ctl_io_pool** %3, align 8
  %14 = getelementptr inbounds %struct.ctl_io_pool, %struct.ctl_io_pool* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %union.ctl_io*, %union.ctl_io** %2, align 8
  %17 = call i32 @uma_zfree(i32 %15, %union.ctl_io* %16)
  br label %18

18:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @uma_zfree(i32, %union.ctl_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
